# himitsu

./: .gitignore  EDICT_LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.macosx  README  config.h.in  configure  configure.ac
src/: curses.c  curses.h  edict.c  edict.h  kanji.c  kanji.h  learning.c  learning.h  main.c  main.h  search.c  search.h  vocab.c  vocab.h
